# ProgramC

./: AssignmentPersonalWeek3.c  AssignmentPersonalWeek3Case2.c  CMakeLists.txt  main.c
ASSIGNMENT_ALGO_TEAM_WEEK2/: calculateGrade.c
AssignmentPersonalWeek3/: AssignmentPersonalWeek3.c  AssignmentPersonalWeek3Case2.c
AssignmentPersonalWeek8/: SearchMonth.c  structAndUnion.c
AssignmentWeek7/: calculateSalary.c
Kalkulator/: Calculator.c
MethodInC/: MethodInC.c
Other/: file.c
TasFormSeasion6/: TaskFormSeason6.c
