cmake_minimum_required(VERSION 3.26)
project(FristProgramC C)

set(CMAKE_C_STANDARD 11)

add_executable(FristProgramC Other/main.c
        Other/file.c
        AssignmentPersonalWeek3/AssignmentPersonalWeek3.c
        AssignmentPersonalWeek3/AssignmentPersonalWeek3Case2.c
        Kalkulator/Calculator.c
)
